# libstatistics_collector

./: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
.github/: bug_report.md  dependabot.yml  epic.md  spike.md  user-story.md
.github/workflows/: autoapprove.yml  automerge.yml  lint.yml  test.yml
benchmark/: benchmark_iterative.cpp
include/libstatistics_collector/collector/: collector.hpp  generate_statistics_message.hpp  metric_details_interface.hpp
include/libstatistics_collector/moving_average_statistics/: moving_average.hpp  types.hpp
include/libstatistics_collector/topic_statistics_collector/: received_message_age.hpp  received_message_period.hpp  topic_statistics_collector.hpp
src/libstatistics_collector/collector/: generate_statistics_message.cpp
src/libstatistics_collector/moving_average_statistics/: types.cpp
test/benchmark/: benchmark_iterative.cpp
test/collector/: test_collector.cpp
test/moving_average_statistics/: test_moving_average_statistics.cpp
test/msg/: DummyCustomHeaderMessage.msg
test/topic_statistics_collector/: test_received_message_age.cpp  test_received_message_period.cpp
